--- a/TODO.org
+++ b/TODO.org
@@ -1,5 +1,6 @@
 #+title: Animatron
 #+todo: TODO NEXT IN_PROGRESS | DONE
+#+startup: overview
 
 * TODO state machines
 * NEXT pivot (anchor?)
@@ -13,11 +14,11 @@
 * TODO find better syntax for tweens
 * DONE `/animation/property`
 * TODO Abstraction of `set*Property` - join all 3 methods
-* IN_PROGRESS `/text/property`
 * TODO rethink cmd evaluation
 - parse command for variables
 - parse command for expressions, passing variables
 
+* DONE `/text/property`
 * DONE Tween
 - [X] currently only supports actor properties
 - [X] add support for animation properties
