--- a/TODO.org
+++ b/TODO.org
@@ -2,14 +2,6 @@
 #+todo: TODO FIX NEXT IN_PROGRESS | DONE
 #+startup: overview
 
-* FIX variable parsing partial match
-variables with shorter names that match with a part of a longer variable name make things wonky
-#+begin_src
-  /set a 40
-  /def /bla animation
-    /create x $animation ## $anim results in -- 40nimation
-#+end_src
-
 * FIX `/editor/append` to accept variables
 it has unexpected behaviour when using variables `/edior/append /post $bla`
 
@@ -27,6 +19,14 @@ it has unexpected behaviour when using variables `/edior/append /post $bla`
 * TODO rethink cmd evaluation
 - parse command for variables
 - parse command for expressions, passing variables
+
+* DONE variable parsing partial match
+variables with shorter names that match with a part of a longer variable name make things wonky
+#+begin_src
+  /set a 40
+  /def /bla animation
+    /create x $animation ## $anim results in -- 40nimation
+#+end_src
 
 * DONE `/animation/property`
 * DONE `/text/property`
