--- a/README.adoc
+++ b/README.adoc
@@ -4,15 +4,15 @@
 **Animatron** is an experimental environment (very much "work in
 progress") that enables creation of "visual poetry" in the form of
 animations and images, created in real-time through live coding. It's
-implemented using the open-source [Godot
-engine](https://godotengine.org/), and communicates with any "client"
+implemented using the open-source https://godotengine.org/[Godot
+engine], and communicates with any "client"
 application or live coding language &mdash; such as
-[SuperCollider](https://supercollider.github.io/) &mdash; via the
+https://supercollider.github.io/[SuperCollider] &mdash; via the
 network, using the Open Sound Control (OSC) protocol on port `56101`.
 
 == Installation
 
-1. Download the latest version for your platform from the [release page](https://github.com/loopier/animatron/releases).
+1. Download the latest version for your platform from the https://github.com/loopier/animatron/releases[release page].
 2. Run the executable.
 
 If you are on MacOS you may encounter some installation issues. See how to solve them <<MacOS,below>>.
@@ -25,26 +25,23 @@ When using image collections, it gathers them from named folders, using the fold
 
 The default directory to store animations is: `user://assets/animations` where `user://` depends on the system you're on:
 
-- Linux`~/.local/share/animatron/`
-- macOS`~/Library/Application Support/`
-- Windows`%APPDATA%\`
+- Linux: `~/.local/share/animatron/`
+- macOS: `~/Library/Application Support/`
+- Windows: `%APPDATA%\`
 
 For example, on Linux, having a collection of `.png` images in this directory `~/.local/share/animatron/assets/animations/whatever/` would allow us to create an actor with:
 
-```
-/load whatever
-/create myactor whatever
-```
+    /load whatever
+    /create myactor whatever
 
 This works with symlinks as well (shortcuts), so you don't need to have the actual folders in that path.
 
 If you want to use images that are in other directories, you can change the assets path with:
 
-``` animatron
-/assets/path path/to/your/custom/directory
-```
+    /assets/path path/to/your/custom/directory
 
-We strongly recommend using your own animations, but you can find some of ours in [this link](https://my.hidrive.com/share/jzod7tz1uq).
+
+We strongly recommend using your own animations, but you can find some of ours in https://my.hidrive.com/share/jzod7tz1uq[this link].
 
 === MacOS
 Run `Animatron.app` by double-clicking it. The first time you run it, it may be prevented from opening by the macOS Gatekeeper. In this case, you should right-click (or Control-click) the app and select *Open*. If a security warning dialog appears, click the *Open* button to explicitly give permission to run it (only do this if you're sure you've downloaded Animatron from a reliable source). Once you've given your permission, it will remember it for future runs.
@@ -58,4 +55,4 @@ If `Animatron.app` fails to run even after following the above steps, it may hav
 
 == Versions
 
-This repo is a remake of [Animatron](https://github.com/loopier/animatron-godot3) for Godot 4.x and above. Some stuff might be unstable.
+This repo is a remake of https://github.com/loopier/animatron-godot3[Animatron] for Godot 4.x and above. Some stuff might be unstable.
