--- a/README.adoc
+++ b/README.adoc
@@ -10,6 +10,10 @@ application or live coding language &mdash; such as
 https://supercollider.github.io/[SuperCollider] &mdash; via the
 network, using the Open Sound Control (OSC) protocol on port `56101`.
 
+== Reference
+
+See <</docs/extended.adoc,OSC interface reference>>.
+
 == Installation
 
 1. Download the latest version for your platform from the https://github.com/loopier/animatron/releases[release page].
