--- a/README.adoc
+++ b/README.adoc
@@ -12,7 +12,8 @@ network, using the Open Sound Control (OSC) protocol on port `56101`.
 
 == Reference
 
-See <</docs/extended.adoc,OSC interface reference>>.
+See link:docs/extended.adoc[OSC interface reference].
+// See https://github.com/loopier/animatron/docs/extended.adoc[Osc interface reference].
 
 == Installation
 
