--- a/docs/extended.adoc
+++ b/docs/extended.adoc
@@ -136,13 +136,13 @@ _Example:_ `/rotate lola 10`
 
 
 === /size actor:s size:f
-Set the `actor`'s absolute `size` relative to the normal size (on both axis). `1` is normal size; `0.5` is half the size; `2` is twice the size.
+Set the `actor` 's absolute `size` relative to the normal size (on both axis). `1` is normal size; `0.5` is half the size; `2` is twice the size.
 
 _Example:_ `/size lola 1.5`
 
 
 === /size/xy actor:s x:f y:f
-Set the `actor`'s absolute `size` relative to the normal size with different values on the `x` and `y` axis.
+Set the `actor` 's absolute `size` relative to the normal size with different values on the `x` and `y` axis.
 
 _See:_ <<_size_actors_sizef,/size>>
 
@@ -150,13 +150,13 @@ _Example:_ `/size/xy lola 1.5 0.7`
 
 
 === /size/x actor:s x:f
-Set the `actor`'s absolute `size` relative to the normal size on the `x` axis.
+Set the `actor` 's absolute `size` relative to the normal size on the `x` axis.
 
 _Example:_ `/size/x lola 1.5 0.7`
 
 
 === /size/y actor:s y:f
-Set the `actor`'s absolute `size` relative to the normal size on the `y` axis.
+Set the `actor` 's absolute `size` relative to the normal size on the `y` axis.
 
 _Example:_ `/size/y lola 1.5 0.7`
 
@@ -206,19 +206,19 @@ _Example:_ `/hide lola`
 == color
 
 === /color/r actor:s value:f
-Set the `actor`'s color to a `value` of red (between 0 and 1).
+Set the `actor` 's color to a `value` of red (between 0 and 1).
 
 _Example:_ `/color/r lola 0.5`
 
 
 === /color/g actor:s value:f
-Set the `actor`'s color to a `value` of green (between 0 and 1).
+Set the `actor` 's color to a `value` of green (between 0 and 1).
 
 _Example:_ `/color/g lola 0.5`
 
 
 === /color/b actor:s value:f
-Set the `actor`'s color to a `value` of blue (between 0 and 1).
+Set the `actor` 's color to a `value` of blue (between 0 and 1).
 
 _Example:_ `/color/b lola 0.5`
 
@@ -228,19 +228,19 @@ _Example:_ `/color/b lola 0.5`
 == animation
 
 === /play actor:s
-Play the `actor`'s animation
+Play the `actor` 's animation
 
 _Example:_ `/play lola`
 
 
 === /backwards actor:s
-Play the `actor`'s animation backwards
+Play the `actor` 's animation backwards
 
 _Example:_ `/play lola`
 
 
 === /stop actor:s
-Stop the `actor`'s animation
+Stop the `actor` 's animation
 
 _Example:_ `/play lola`
 
@@ -252,7 +252,7 @@ _Example:_ `/play lola`
 
 
 === /animation actor:s animation:s
-Change the `actor`'s `animation`.
+Change the `actor` 's `animation`.
 
 _Example:_ `/animation lola letter-a`
 
@@ -261,32 +261,44 @@ _Example:_ `/animation lola letter-a`
 See <<_animation,/animation>>
 
 === /speed actor:s speed:f
-Set the `actor`'s animation `speed` (1 = normal speed, 2 = 2 x speed).
+Set the `actor` 's animation `speed` (1 = normal speed, 2 = 2 x speed).
 
 _Example:_ `/speed lola 2.1`
 
 
 === /frame actor:s frame:i
-Set the `actor`'s current `frame`. If the value of the `frame` is grater than the number of frames in the movie, it will wrap around.
+Set the `actor` 's current `frame`. If the value of the `frame` is grater than the number of frames in the movie, it will wrap around.
 
 _Example:_ `/frame lola 4`
 
 
+=== /next/frame actor:s
+Advance `actor` 's animation by one frame.
+
+_Example:_ `/next/frame lola 2`
+
+
+=== /prev/frame actor:s
+Move `actor` 's animation one frame backwards.
+
+_Example:_ `/prev/frame lola 2`
+
+
 === /start/frame actor:s frame:f
-Set the first `frame` of the loop in `actor`'s animation. Defaults to 0.
+Set the first `frame` of the loop in `actor` 's animation. Defaults to 0.
 
 _Example:_ `/start/frame lola 2`
 
 
 === /end/frame actor:s frame:f
-Set the last `frame` of the loop in `actor`'s animation.
+Set the last `frame` of the loop in `actor` 's animation.
 Defaults to number of frames of the animation.
 
 _Example:_ `/end/frame lola 6`
 
 
 === /loop actor:s
-Loop the `actor`'s animation.
+Loop the `actor` 's animation.
 
 _Example:_ `/loop lola`
 
@@ -294,7 +306,7 @@ See also: <<_noloop,/noloop>>, <<_pingpong,/pingpong>>
 
 
 === /noloop actor:s
-Don't loop the `actor`'s animation. Plays the animation stopping at the last frame.
+Don't loop the `actor` 's animation. Plays the animation stopping at the last frame.
 
 _Example:_ `/noloop lola`
 
@@ -314,19 +326,19 @@ there's no such thing for `AnimatedSprite2D`.
 
 
 === /offset actor:s x:i y:i
-Set the `actor`'s animation drawing offset (in pixels) relative to the anchor point.
+Set the `actor` 's animation drawing offset (in pixels) relative to the anchor point.
 
 _Example:_ `/offset lola 50 -30`
 
 
 === /offset/x actor:s pixels:i
-Set the `actor`'s animation drawing offset on the `x` axis.
+Set the `actor` 's animation drawing offset on the `x` axis.
 
 _Example:_ `/offset/x lola 50`
 
 
 === /offset/y actor:s pixels:i
-Set the `actor`'s animation drawing offset on the `y` axis.
+Set the `actor` 's animation drawing offset on the `y` axis.
 
 _Example:_ `/offset/y lola -30`
 
