--- a/docs/extended.adoc
+++ b/docs/extended.adoc
@@ -455,10 +455,10 @@ _Example:_ `/editor/font/size 60`
 
 === /window
 See:
-<<_window_mode_modi,/window/mode>>
-<<_window_fullscreen,/window/fullscreen>>
+<<_windowmode_modi,/window/mode>>
+<<_windowfullscreen,/window/fullscreen>>
 <<_fullscreen,/fullscreen>>
-<<_window_windowed,/window/windowed>>
+<<_windowwindowed,/window/windowed>>
 <<_windowed,/windowed>>
 
 === /window/mode mode:i
@@ -479,18 +479,29 @@ Set window mode to fullscreen.
 
 _Example:_ `/window/fullscreen`
 
-See also <<_window_mode_modi,/window/mode>>
+See also <<_windowmode_modi,/window/mode>>
 
 === /fullscreen
-See <<_window_fullscreen,/window/fullscreen>>
+See <<_windowfullscreen,/window/fullscreen>>
 
 === /window/windowed
 Set window mode to windowed.
 
 _Example:_ `/window/windowed`
 
-See also <<_window_mode_modi,/window/mode>>
+See also <<_windowmode_modi,/window/mode>>
 
 === /windowed
-See <<_window_windowed,/window/windowed>>
+See <<_windowwindowed,/window/windowed>>
+
+
+
+== osc
+
+=== /osc msg:s
+Send an OSC `msg` to a remote server.
+
+See
+<<_oscsend_msgs,/osc/send>>
+<<_oscremote_ips_porti,/osc/remote>>
 
