--- a/README.adoc
+++ b/README.adoc
@@ -12,7 +12,7 @@ network, using the Open Sound Control (OSC) protocol on port `56101`.
 
 == Reference
 
-See link:docs/extended.adoc[OSC interface reference].
+See link:docs/help.adoc[OSC interface reference].
 
 == Installation
 
