--- a/docs/extended.adoc
+++ b/docs/extended.adoc
@@ -207,9 +207,10 @@ Make the `actor` invisible
 _Example:_ `/hide lola`
 
 
-
+See also <<_color_actors_rf_gf_bf,/color>>
 
 == color
+
 
 === /color/r actor:s value:f
 Set the `actor` 's color to a `value` of red (between 0 and 1).
@@ -227,6 +228,16 @@ _Example:_ `/color/g lola 0.5`
 Set the `actor` 's color to a `value` of blue (between 0 and 1).
 
 _Example:_ `/color/b lola 0.5`
+
+
+=== /tint actor:s r:f g:f b:f
+Same as <<_color_actors_rf_gf_bf,/color>>, but this subtracts the value to the current color, while `/color` adds to it.
+
+Using `/tint x 1 0 0` turns white into red, keeping black as black.
+
+Using `/color x 1 0 0` turns black into red, keeping white as white.
+
+_Example:_ `/tint lola 0.5 0.25 0.0`
 
 
 
