Temporary fix for `/animation`
This solution is less hacky than the previous one in 718746598aef88ced72bd60731f221b428e38b3f.

--- a/docs/extended.adoc
+++ b/docs/extended.adoc
@@ -274,6 +274,12 @@ Change the `actor` 's `animation`.
 _Example:_ `/animation lola letter-a`
 
 
+/animation/frames/method /set/animation/speed $actor 12
+
+/end/frame $actor -1
+
+/speed $actor 2
+
 === /anim actor:s animation:s
 See <<_animation,/animation>>
 
