Change /color to modulate/multiply an Actor's colour; add /color/add
- `/color/add` has the old behaviour of `/color`, so it adds the RGB
  values to the colour of the texture. However, if you use `/color`,
  it first modulates (multiplies) the texture colour by the specified
  colour. Modulation is more useful when you have B&W or grey images;
  addition is more useful when you have very dark images.

--- a/docs/help.adoc
+++ b/docs/help.adoc
@@ -637,7 +637,11 @@ List all PARENT's children actors.
 
 === /color actor:s r:f g:f b:f
 
-Add an RGB colour to the ACTOR. R, G and B should be in the 0-1 range (can be negative to subtract colour). Set to black (0,0,0) to restore its original colour.
+Modulate the ACTOR by an RGB colour. R, G and B should be in the 0-1 range. Set to white (1,1,1) to restore its original colour.
+
+=== /color/add actor:s r:f g:f b:f
+
+Add an RGB colour to the ACTOR. R, G and B should be in the 0-1 range (can be negative to subtract colour). Set to black (0,0,0) to remove its effect. The addition is done after the modulation by `/color` (if any).
 
 === /commands/list 
 
