Add /mask and /unmask commands to do Actor masking (issue #56)
- masking uses the `clip_children` functionality, which had to be
  made to work in the context of our use of SubViewport and custom
  shaders.
- masking uses reparenting, so masked Actors become children of the
  Actor acting as mask.
- also fixed numerous issues with (un)parenting, transforms getting
  messed up, node ordering. Now, the global transform of an Actor
  should remain constant before and after any kind of reparenting
  or masking.
- also fixed issues related to reordering, including /front, /behind,
  /top and /bottom commands, and also artibrary depth hierarchies of
  Actors.

--- a/docs/help.adoc
+++ b/docs/help.adoc
@@ -621,7 +621,7 @@ Set the path for the parent directory of the assets.
 
 === /behind actor:s target:s
 
-Draw the ACTOR behind the TARGET.
+Draw the ACTOR immediately behind the TARGET.
 
 === /bottom actor:s
 
@@ -707,7 +707,7 @@ Iterate `iterations` times over `varName`, substituting the current iteration va
 
 === /front actor:s target:s
 
-Draw the ACTOR in front of the TARGET.
+Draw the ACTOR immediately in front of the TARGET.
 
 === /get variable:s
 
@@ -724,6 +724,10 @@ Load an ANIMATION asset from disk. It will create an animation with the same nam
 === /log/level level:s
 
 Set the log level to either 'fatal', 'error', 'warn', 'debug' or 'verbose'
+
+=== /mask child:s mask:s
+
+Mask a child ACTOR by a parent ACTOR
 
 === /method method:s actor:s args:...
 
@@ -926,6 +930,10 @@ Tweens a PROPERTY of an ACTOR between the current value and final VALUE in a spa
 === /unload animation:s
 
 Removes the ANIMATION asset from disk. This allows to free memory, and to reload a fresh version of the animation.
+
+=== /unmask mask:s
+
+Stop an ACTOR from behaving as a mask. Any masked child nodes will be reparented to the top level (similar to `/parent/free`).
 
 === /view/size width:i height:i
 
