--- a/README.adoc
+++ b/README.adoc
@@ -1,14 +1,7 @@
 = Animatron
 :toc: left
 
-**Animatron** is an experimental environment (very much "work in
-progress") that enables creation of "visual poetry" in the form of
-animations and images, created in real-time through live coding. It's
-implemented using the open-source https://godotengine.org/[Godot
-engine], and communicates with any "client"
-application or live coding language &mdash; such as
-https://supercollider.github.io/[SuperCollider] &mdash; via the
-network, using the Open Sound Control (OSC) protocol on port `56101`.
+**Animatron** is an experimental environment (very much "work in progress") that enables creation of "visual poetry" in the form of animations and images, created in real-time through live coding. It's implemented using the open-source https://godotengine.org/[Godot engine], and communicates with any "client" application or live coding language &mdash; such as https://supercollider.github.io/[SuperCollider] &mdash; via the network, using the Open Sound Control (OSC) protocol on port `56101`.
 
 == Reference
 
