--- a/tutorial/tutorial-intro-howdoesitwork-info.adoc
+++ b/tutorial/tutorial-intro-howdoesitwork-info.adoc
@@ -1,17 +1,15 @@
 === How does it work?
 
-As we said earlier, to do anything in Animatron you need to send it *commands*.
+Everything in Animatron is done using *commands*.
 
-You can write them in the editor or send them from other software or devices in the same network using OSC messages. But we'll stick to the editor for now, to keep things simple.
+You can write them in the editor or send them from other software or devices in the same network using OSC messages.
 
-For everything that you can do with Animatron, there's a command. See the full <<help.adoc#,OSC reference documentaion>> for the list of available commands.
+See the full <<help.adoc#,list>> of available commands.
 
 ==== Custom commands
 
-As you progress you'll want to do more complex things.
+Custom commands can be defined to create complex behaviours out of other commands.
 
-It can be annoying to type all the commands for complex behaviours everytime you want need them to happen.
+We call these custom commands *defs*, for _definition_.
 
-To simpify this, you can create your new commands to group complex command sequences. These are called *defs*, for _definition_.
-
-As you would expect, there's also a command to create defs.
+Defs are created with the `/def` command.
